# llm-rag-evaluation

./: .gitignore  README.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile
src/: LLM RAG evaluation.ipynb  LLM RAG evaluation_2.ipynb  df_questions.csv  rag1.ipynb  test_ragas.ipynb  test_truelens.ipynb  teste1.ipynb  teste_gradio.ipynb  teste_gradio.py
