[tool.poetry]
name = "llm-rag-evaluation-ragas"
version = "0.1.0"
description = ""
authors = ["Rhuan Barros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ragas = "^0.1.21"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
