[tool.poetry]
name = "llm-rag-evaluation-ragas"
version = "0.1.0"
description = ""
authors = ["Rhuan Barros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
unstructured = {extras = ["all-docs"], version = "^0.15.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
